remove all easy migration code
